--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
       </div>
     
     </div>
+
+
+    <div class="status mobile">
+      <ul> 
+        <li><a href="#">All</a></li>
+        <li><a href="#">Active</a></li>
+        <li><a href="#">Completed</a></li>
+      </ul>
+    </div> 
   
     <p class="drag-drop"> Drag and drop to reorder list</p>
 
