Add filter options for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <p><span class="number">5</span> items left</p>
         <div class="status">
           <ul> 
-            <li><a href="#">All</a></li>
-            <li><a href="#">Active</a></li>
-            <li><a href="#">Completed</a></li>
+            <li class="all"><a href="#">All</a></li>
+            <li class="active"><a href="#">Active</a></li>
+            <li class="completed"><a href="#">Completed</a></li>
           </ul>
         </div> 
         <p class="clear">Clear Completed</p>
@@ -56,9 +56,9 @@
 
     <div class="status mobile">
       <ul> 
-        <li><a href="#">All</a></li>
-        <li><a href="#">Active</a></li>
-        <li><a href="#">Completed</a></li>
+        <li class="all"><a href="#">All</a></li>
+        <li class="active"><a href="#">Active</a></li>
+        <li class="completed"><a href="#">Completed</a></li>
       </ul>
     </div> 
   
